# cargo-deluxe

./: Cargo.toml  README.md  flake.nix
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
bin-intercept/: Cargo.toml
bin-intercept/src/: lib.rs
cargo-deluxe/: Cargo.toml
cargo-deluxe/src/: lib.rs
