[workspace]
members = [
  "bin-intercept",
  "cargo-deluxe"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "fedimint"


[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.ci]
inherits = "dev"
incremental = false

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false
